Calculate cd name
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9660 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/tools/simple-cdd/Makefile
+++ b/tools/simple-cdd/Makefile
@@ -30,3 +30,6 @@ passsetup:
 
 /usr/bin/build-simple-cdd:
 	sudo apt-get install simple-cdd
+
+test:
+	. profiles/fusionforge.conf ; env ; echo "cd_img=${cd_img}"
