--- a/tools/simple-cdd/profiles/fusionforge.conf
+++ b/tools/simple-cdd/profiles/fusionforge.conf
@@ -3,6 +3,8 @@ export CODENAME="squeeze"
 export DEBVERSION="fusionforge"
 export OFFICIAL="FusionForge50"
 export OFFICIAL_VAL=0
+export OUT="images"
+export ARCHES=`dpkg-architecture -qDEB_BUILD_ARCH`
 
 # Don't include the manual or release notes, respectively, to save space.
 export OMIT_MANUAL=1
@@ -12,6 +14,7 @@ export simple_cdd_temp="$simple_cdd_dir/tmp.$(dpkg --print-architecture)/"
 
 # location of the CD image (used with qemu's -cdrom option)
 cd_img="$OUT/${CDNAME:-debian}-$(echo $DEBVERSION | sed -e 's/[. ]//g')-$(echo $ARCHES | tr ' ' '-')-CD-1.iso"
+export cd_img
 
 # You can use a alternative splash image using a PNG image (640 x 480, 
 # 4-bit colormap, non-interlaced), other formats should work but weren't 
