take in account yui
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9693 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/3rd-party/Makefile
+++ b/3rd-party/Makefile
@@ -1,4 +1,4 @@
-DIRLIST=db2latex-xsl htmlpurifier mailman nusoap php-apache-log4php php-mail-mbox
+DIRLIST=db2latex-xsl htmlpurifier mailman nusoap php-apache-log4php php-mail-mbox yui
 
 %:
 	@for dir in $(DIRLIST); do \
