Fix warnings on sys_dbport and sys_use_manual_uploads
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9695 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/etc/local.inc.example
+++ b/gforge/etc/local.inc.example
@@ -159,6 +159,8 @@ $sys_use_bookmarks=true;
 $sys_use_project_tags=true;
 $sys_use_project_full_list=true;
 
+$sys_use_manual_uploads=false;
+
 // This one exists purely for hysteric raisins
 $sys_use_mwframe=false;
 
