--- a/plugins/coclico/soapadmin/debian/control
+++ b/plugins/coclico/soapadmin/debian/control
@@ -11,7 +11,7 @@ Vcs-Bzr: http://scm.fusionforge.org/bzr/fusionforge/svn-trunk-ro/
 
 Package: fusionforge-plugin-soapadmin
 Architecture: all
-Depends: gforge-common, gforge-db-postgresql | gforge-db, gforge-web-apache2 | gforge-web, gforge-shell-postgresql | gforge-shell, php5-cli, ${misc:Depends}
+Depends: gforge-common, gforge-db-postgresql | gforge-db, gforge-web-apache2 | gforge-web, gforge-shell-postgresql | gforge-shell, php5-cli, php-apache-log4php, ${misc:Depends}
 Description: collaborative development tool - SoapAdmin plugin
  .
  This plugin contains the SoapAdmin subsystem of FusionForge. It allows each
