--- a/gforge/plugins/scmsvn/etc/scmsvn.ini
+++ b/gforge/plugins/scmsvn/etc/scmsvn.ini
@@ -4,3 +4,5 @@ use_ssl = yes
 use_ssh = no
 anonsvn_login = anonsvn
 anonsvn_password = anonsvn
+default_server = $core/web_host
+repos_path = $core/chroot/scmrepos/svn
