--- a/gforge/plugins/externalsearch/etc/config.ini
+++ b/gforge/plugins/externalsearch/etc/config.ini
@@ -2,4 +2,4 @@
 
 # JSON-encoded array of name->URL key/value pairs
 # %web_host% will be replaced with the web_host value from the forge's config
-engines = {"Google":"http:\/\/www.google.com\/search?as_sitesearch=%web_host%&as_q=","AllTheWeb":"http:\/\/alltheweb.com\/search?advanced=1&dincl=%web_host%&q="}
+engines = {"Google":"http:\/\/www.google.com\/search?as_sitesearch=$core/web_host&as_q=","AllTheWeb":"http:\/\/alltheweb.com\/search?advanced=1&dincl=$core/web_host&q="}
