Use variable substitution in config for mediawiki plugin
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9971 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/plugins/mediawiki/etc/mediawiki.ini
+++ b/gforge/plugins/mediawiki/etc/mediawiki.ini
@@ -1,15 +1,15 @@
 [mediawiki]
 ## Whether uploads are allowed on the mediawiki
-# enable_uploads = false
+enable_uploads = false
 
 ## Source dir of the mediawiki source code.
-# src_path = /usr/share/mediawiki
+src_path = /usr/share/mediawiki
 
 ## Mediawiki projects dir. 
 ## All projects using the plugin have a subdirectory in this directory.
-# projects_path = <sys_var_path>/plugins/mediawiki/projects
+projects_path = $core/data_path/plugins/mediawiki/projects
 
 ## Mediawiki master dir.
 ## This is where all the links to the mediawiki source code are stored.
-# master_path = <sys_var_path>/plugins/mediawiki/master
+master_path = $core/data_path/plugins/mediawiki/master
 
