--- a/gforge/plugins/blocks/etc/blocks.ini
+++ b/gforge/plugins/blocks/etc/blocks.ini
@@ -1,4 +1,4 @@
 [blocks]
 
 ; JSON-encoded array of key/value pairs
-templates = '{"summary_right":"{boxTop Project}\nEnter your text here\n{boxBottom}","summary_description":"Enter your description here","*":"{boxHeader}Enter your text here{boxFooter}"}'
+templates = "{\"summary_right\":\"{boxTop Project}\nEnter your text here\n{boxBottom}\",\"summary_description\":\"Enter your description here\",\"*\":\"{boxHeader}Enter your text here{boxFooter}\"}"
