Move JSON bits into external files, since parse_ini_file in PHP < 5.3 can't deal with double quotes
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9978 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/plugins/externalsearch/etc/externalsearch.ini
+++ b/gforge/plugins/externalsearch/etc/externalsearch.ini
@@ -1,5 +1,5 @@
 [externalsearch]
 
-# JSON-encoded array of name->URL key/value pairs
-# %web_host% will be replaced with the web_host value from the forge's config
-engines = {"Google":"http:\/\/www.google.com\/search?as_sitesearch=$core/web_host&as_q=","AllTheWeb":"http:\/\/alltheweb.com\/search?advanced=1&dincl=$core/web_host&q="}
+; Path to a file containing a JSON-encoded array of key/value pairs
+; %web_host% will be replaced with the web_host value from the forge's config
+engines_file = "$core/source_path/plugins/externalsearch/etc/engines.json"
