Stricter syntax for *.ini files (and one PHP file too)
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9979 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/plugins/mediawiki/etc/mediawiki.ini
+++ b/gforge/plugins/mediawiki/etc/mediawiki.ini
@@ -1,15 +1,16 @@
 [mediawiki]
-## Whether uploads are allowed on the mediawiki
+
+; Whether uploads are allowed on the mediawiki
 enable_uploads = false
 
-## Source dir of the mediawiki source code.
+; Source dir of the mediawiki source code.
 src_path = /usr/share/mediawiki
 
-## Mediawiki projects dir. 
-## All projects using the plugin have a subdirectory in this directory.
-projects_path = $core/data_path/plugins/mediawiki/projects
+; Mediawiki projects dir. 
+; All projects using the plugin have a subdirectory in this directory.
+projects_path = "$core/data_path/plugins/mediawiki/projects"
 
-## Mediawiki master dir.
-## This is where all the links to the mediawiki source code are stored.
-master_path = $core/data_path/plugins/mediawiki/master
+; Mediawiki master dir.
+; This is where all the links to the mediawiki source code are stored.
+master_path = "$core/data_path/plugins/mediawiki/master"
 
