--- a/gforge/plugins/scmarch/etc/scmarch.ini
+++ b/gforge/plugins/scmarch/etc/scmarch.ini
@@ -1,3 +1,4 @@
 [scmarch]
-default_server = $core/web_host
-repos_path = $core/chroot/scmrepos/arch
+
+default_server = "$core/web_host"
+repos_path = "$core/chroot/scmrepos/arch"
