--- a/gforge/plugins/scmbzr/etc/scmbzr.ini
+++ b/gforge/plugins/scmbzr/etc/scmbzr.ini
@@ -1,3 +1,4 @@
 [scmbzr]
-default_server = $core/web_host
-repos_path = $core/chroot/scmrepos/bzr
+
+default_server = "$core/web_host"
+repos_path = "$core/chroot/scmrepos/bzr"
