--- a/gforge/plugins/scmccase/etc/scmccase.ini
+++ b/gforge/plugins/scmccase/etc/scmccase.ini
@@ -1,4 +1,5 @@
 [scmccase]
-default_server = $core/web_host
-this_server = $core/web_host
+
+default_server = "$core/web_host"
+this_server = "$core/web_host"
 tag_pattern = GROUPNAME_vob
