--- a/gforge/plugins/scmcvs/etc/scmcvs.ini
+++ b/gforge/plugins/scmcvs/etc/scmcvs.ini
@@ -1,3 +1,4 @@
 [scmcvs]
-default_server = $core/web_host
-repos_path = $core/chroot/scmrepos/cvs
+
+default_server = "$core/web_host"
+repos_path = "$core/chroot/scmrepos/cvs"
