--- a/gforge/plugins/scmdarcs/etc/scmdarcs.ini
+++ b/gforge/plugins/scmdarcs/etc/scmdarcs.ini
@@ -1,3 +1,4 @@
 [scmdarcs]
-default_server = $core/web_host
-repos_path = $core/chroot/scmrepos/darcs
+
+default_server = "$core/web_host"
+repos_path = "$core/chroot/scmrepos/darcs"
