--- a/gforge/plugins/scmgit/etc/scmgit.ini
+++ b/gforge/plugins/scmgit/etc/scmgit.ini
@@ -1,3 +1,4 @@
 [scmgit]
-default_server = $core/web_host
-repos_path = $core/chroot/scmrepos/git
+
+default_server = "$core/web_host"
+repos_path = "$core/chroot/scmrepos/git"
