--- a/gforge/plugins/scmhg/etc/scmhg.ini
+++ b/gforge/plugins/scmhg/etc/scmhg.ini
@@ -1,3 +1,4 @@
 [scmhg]
-default_server = $core/web_host
-repos_path = $core/chroot/scmrepos/hg
+
+default_server = "$core/web_host"
+repos_path = "$core/chroot/scmrepos/hg"
