Variable interpolation needs to be delayed, so as to allow booleans to refer to one another, such as defining scmsvn/use_ssl=$core/use_ssl
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9991 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/plugins/scmsvn/etc/scmsvn.ini
+++ b/gforge/plugins/scmsvn/etc/scmsvn.ini
@@ -1,7 +1,7 @@
 [scmsvn]
 
 use_dav = yes
-use_ssl = yes
+use_ssl = "$core/use_ssl"
 use_ssh = no
 anonsvn_login = anonsvn
 anonsvn_password = anonsvn
