Renamed variables for compatibility with config system
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10037 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/etc/httpd.conf.d/02-config-main.conf
+++ b/gforge/etc/httpd.conf.d/02-config-main.conf
@@ -1,17 +1,17 @@
 #
 # Main directory options
 #
-<Directory {usr_share_gforge}/www>
+<Directory {core/source_path}/www>
   Options Indexes FollowSymlinks
   AllowOverride All
   
-  Include {gforge_etc}/httpd.conf.d/auth.forge.inc
+  Include {core/config_path}/httpd.conf.d/auth.forge.inc
   
   #
   # PHP settings
   #
   
-  php_admin_value include_path "{sys_custom_path}:{gforge_etc}:{usr_share_gforge}:{usr_share_gforge}/www/include:."
+  php_admin_value include_path "{core/custom_path}:{core/config_path}:{core/source_path}:{core/source_path}/www/include:."
   php_admin_value default_charset "UTF-8"
   php_flag register_globals "off"
   php_flag magic_quotes_gpc "off"
