--- a/gforge/etc/httpd.conf.d/10-vhosts-main.conf
+++ b/gforge/etc/httpd.conf.d/10-vhosts-main.conf
@@ -2,14 +2,14 @@
 # Main host
 #
 <VirtualHost *:80>
-  Include {gforge_etc}/httpd.conf.d/vhost-main.inc
-  Include {gforge_etc}/httpd.conf.d/block-trace.inc
-  Include {gforge_etc}/httpd.conf.d/log.inc
-  Include {gforge_etc}/httpd.conf.d/ssl-off.inc
+  Include {core/config_path}/httpd.conf.d/vhost-main.inc
+  Include {core/config_path}/httpd.conf.d/block-trace.inc
+  Include {core/config_path}/httpd.conf.d/log.inc
+  Include {core/config_path}/httpd.conf.d/ssl-off.inc
 </VirtualHost>
 <VirtualHost *:443>
-  Include {gforge_etc}/httpd.conf.d/vhost-main.inc
-  Include {gforge_etc}/httpd.conf.d/block-trace.inc
-  Include {gforge_etc}/httpd.conf.d/log.inc
-  Include {gforge_etc}/httpd.conf.d/ssl-on.inc
+  Include {core/config_path}/httpd.conf.d/vhost-main.inc
+  Include {core/config_path}/httpd.conf.d/block-trace.inc
+  Include {core/config_path}/httpd.conf.d/log.inc
+  Include {core/config_path}/httpd.conf.d/ssl-on.inc
 </VirtualHost>
