--- a/gforge/etc/httpd.conf.d/30-vhosts-projects.conf
+++ b/gforge/etc/httpd.conf.d/30-vhosts-projects.conf
@@ -3,14 +3,14 @@
 #
 # This is used when FusionForge has DNS delegation
 <VirtualHost *:80>
-  Include {gforge_etc}/httpd.conf.d/vhost-projects.inc
-  Include {gforge_etc}/httpd.conf.d/block-trace.inc
-  Include {gforge_etc}/httpd.conf.d/log.inc
-  Include {gforge_etc}/httpd.conf.d/ssl-off.inc
+  Include {core/config_path}/httpd.conf.d/vhost-projects.inc
+  Include {core/config_path}/httpd.conf.d/block-trace.inc
+  Include {core/config_path}/httpd.conf.d/log.inc
+  Include {core/config_path}/httpd.conf.d/ssl-off.inc
 </VirtualHost>
 <VirtualHost *:443>
-  Include {gforge_etc}/httpd.conf.d/vhost-projects.inc
-  Include {gforge_etc}/httpd.conf.d/block-trace.inc
-  Include {gforge_etc}/httpd.conf.d/log.inc
-  Include {gforge_etc}/httpd.conf.d/ssl-on.inc
+  Include {core/config_path}/httpd.conf.d/vhost-projects.inc
+  Include {core/config_path}/httpd.conf.d/block-trace.inc
+  Include {core/config_path}/httpd.conf.d/log.inc
+  Include {core/config_path}/httpd.conf.d/ssl-on.inc
 </VirtualHost>
