--- a/gforge/debian/rules
+++ b/gforge/debian/rules
@@ -114,6 +114,9 @@ build: patch remove-binary-files debian/po/templates.pot conffiles
 # Build gettext *.mo files
 	utils/manage-translations.sh build
 
+# Build FHS-compatible Apache config files
+	utils/manage-apache-config.sh
+
 # Preprocess files with DSF-Helper
 	perl $(CURDIR)/deb-specific/dsf-helper.pl
 
@@ -154,8 +157,9 @@ install: build
 	rm -f $(CURDIR)/debian/$(OLDPACKAGE)-plugin-scm*/usr/share/*/plugins/scm*/*/README
 	chmod 755 $(CURDIR)/debian/$(OLDPACKAGE)-plugin-scmcvs/usr/share/*/plugins/scmcvs/sbin/*
 
-# Rename config file
+# Rename config files
 	mv $(CURDIR)/debian/$(OLDPACKAGE)-common/etc/fusionforge/config.ini-fhs $(CURDIR)/debian/$(OLDPACKAGE)-common/etc/fusionforge/config.ini
+	mv $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d-fhs $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d
 
 # Remove Windows files
 	rm -rf $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/usr/share/*/www/scm/viewvc/windows
