Added mechanism for runtime regeneration of Apache config files
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10042 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/debian/rules
+++ b/gforge/debian/rules
@@ -115,7 +115,7 @@ build: patch remove-binary-files debian/po/templates.pot conffiles
 	utils/manage-translations.sh build
 
 # Build FHS-compatible Apache config files
-	utils/manage-apache-config.sh
+	utils/manage-apache-config.sh build
 
 # Preprocess files with DSF-Helper
 	perl $(CURDIR)/deb-specific/dsf-helper.pl
