--- a/gforge/etc/httpd.conf.d-fhs/20-vhosts-lists.conf
+++ b/gforge/etc/httpd.conf.d-fhs/20-vhosts-lists.conf
@@ -29,7 +29,7 @@
   Include /etc/gforge/httpd.conf.d/ssl-off.inc
 </VirtualHost>
 <VirtualHost *:443>
-  Include /etc/gforge/httpd.conf.d/vhost.list.inc
+  Include /etc/gforge/httpd.conf.d/vhost-list.inc
 
   AddHandler cgi-script .cgi
   
