--- a/gforge/etc/httpd.conf.d-opt/02-config-main.conf
+++ b/gforge/etc/httpd.conf.d-opt/02-config-main.conf
@@ -5,7 +5,7 @@
   Options Indexes FollowSymlinks
   AllowOverride All
   
-  Include /opt/fusionforge/etc/httpd.conf.d/auth.forge.inc
+  Include /opt/fusionforge/etc/httpd.conf.d/auth-main.inc
   
   #
   # PHP settings
