--- a/gforge/etc/httpd.conf.d/02-config-main.conf
+++ b/gforge/etc/httpd.conf.d/02-config-main.conf
@@ -5,7 +5,7 @@
   Options Indexes FollowSymlinks
   AllowOverride All
   
-  Include {core/config_path}/httpd.conf.d/auth.forge.inc
+  Include {core/config_path}/httpd.conf.d/auth-main.inc
   
   #
   # PHP settings
