--- a/gforge/etc/httpd.conf.d/20-vhosts-lists.conf
+++ b/gforge/etc/httpd.conf.d/20-vhosts-lists.conf
@@ -29,7 +29,7 @@
   Include {core/config_path}/httpd.conf.d/ssl-off.inc
 </VirtualHost>
 <VirtualHost *:443>
-  Include {core/config_path}/httpd.conf.d/vhost.list.inc
+  Include {core/config_path}/httpd.conf.d/vhost-list.inc
 
   AddHandler cgi-script .cgi
   
